# hindsight

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  demo.bat  dev.bat  hindsight.db  llm_calls.sqlite
backend/: pyproject.toml
backend/hindsight/: cli.py  schemas.py
backend/hindsight/agents/: analyst.py  critic.py  orchestrator.py  planner.py  prompts.py  researcher.py
backend/hindsight/api/: app.py  deps.py  routes_cases.py  routes_eval.py  routes_runs.py
backend/hindsight/data/: case_builder.py  cases.py  edgar.py  market_source.py  models.py
backend/hindsight/eval/: contamination.py  judge.py  outcome_grader.py  suite.py
backend/hindsight/llm/: client.py  recording.py  retry.py
backend/hindsight/memory/: experience.py
backend/hindsight/rag/: bm25_retriever.py  chunker.py  ingest.py
backend/scripts/: build_grid_cases.py  freeze_case_bars.py  pooled_stats.py  probe_endpoint.py
backend/tests/: conftest.py  llm_stubs.py  test_api_cases.py  test_api_eval.py  test_api_runs.py  test_api_static.py  test_api_stream.py  test_bm25_retriever.py  test_case_builder.py  test_cases.py  test_chunker.py  test_contamination.py  test_critic_loop.py  test_edgar.py  test_experience.py  test_grader.py  test_ingest.py  test_judge.py  test_language_and_provenance.py  test_market_source.py  test_nvda_case.py  test_orchestrator.py  test_planner.py  test_prompts.py  test_replay.py  test_researcher.py  test_retry.py  test_sandbox_leakage.py  test_schemas.py  test_smci_case.py  test_smoke.py  test_store.py  test_suite.py  test_tools.py  test_trace.py
(+707 files in other folders)
