[project]
name = "hindsight"
version = "0.1.0"
description = "Time-travel evaluation harness for deep research agents"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "rank-bm25>=0.2.2",
    "yfinance>=0.2.40",
    "python-frontmatter>=1.1",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hindsight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
